--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
+           <!-- Сводка путешествия -->
+           <brief-view class="trip-main__trip-info"></brief-view>
+
           <div class="trip-main__trip-controls  trip-controls">
             <div class="trip-controls__filters">
               <h2 class="visually-hidden">Filter events</h2>
