--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
             </div>
           </div>
 
-          <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
+            <!-- Кнопка добавления точки маршрута -->
+          <add-button-view></add-button-view>
         </div>
       </div>
     </header>
@@ -36,6 +37,7 @@
             <h2 class="visually-hidden">Trip events</h2>
 
             <!-- Сортировка -->
+            <sort-view class="trip-events__trip-sort"></sort-view>
 
             <!-- Контент -->
           </section>
