add list-view wip

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <sort-view class="trip-events__trip-sort"></sort-view>
 
             <!-- Контент -->
+            <list-view class="trip-events__list"></list-view>
           </section>
       </div>
     </main>
